add swagger schema
